--- a/superrentals/templates/index.html
+++ b/superrentals/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>django-ember-example</title>
+    <title>SuperRentals</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="app/config/environment" content="{{ config }}">
